# dominions-bot

./: .drone.yml  .gitignore  Dockerfile  Pipfile  README.md  alembic.ini  docker-compose.yaml  example.env  main.py  pyproject.toml  setup.cfg
.github/workflows/: build.yml  deploy.yml
alembic/: env.py
alembic/versions/: 440b4de8aa05_.py  c4353dbd3e0a_baseline.py
app/: config.py  constants.py  era.py  game_crud.py  game_crud_test.py  game_server_info.py  game_server_updater.py  models.py  scheduler.py  server.py  server_status.py  server_test.py  setup_database.py
old_app/: server_status.py
src/: local_settings.py
src/dominions/: constants.py  game_crud.py  game_crud_test.py  game_server_info.py  rewrite.py  rewrite__test.py  server.py  server_status.py  testing_things__test.py
src/dominions/deprecated/: game_crud.py
src/dominions/deprecated/models/: game.py  game_status.py
src/dominions/mocks/: mock_responses.py
src/dominions/mocks/snek/status/: mock__api_game_status.py  mock__api_player_status.py
src/dominions/models/: era.py  game_info.py  nation_type.py  player.py  player_type.py  turn_status.py
src/dominions/tests/: game_crud__test.py
src/dominions/tests/mocks/: snek_status.json
src/dominions/tests/requests/: snek_details.json
src/plugins/: dominions.py  grog.py
src/slack/: blocks.py  templates.py
