[tool.poetry]
name = "dominions-bot"
version = "0.0.0"
description = "Bot for keeping track of dominions turns for slack and discord"
authors = ["stvnksslr <stvnksslr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
discord = "^1.0.1"
requests = "^2.22.0"
python-dotenv = "^0.10.3"
pendulum = "^2.0.5"
schedule = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.8"
pytest-sugar = "^0.9.2"
pep8-naming = "^0.9.0"
flake8 = "^3.7"
flake8-pytest = "^1.3"
flake8-bandit = "^2.1.2"
flake8-functions = "^0.0.2"
flake8-variables-names = "^0.0.3"
flake8-mypy = "^17.8.0"
flake8-bugbear = "^19.8.0"
flake8-eradicate = "^0.2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
