[tool.poetry]
name = "dominions-bot"
version = "0.0.0"
description = "Bot for keeping track of dominions turns for slack and discord"
authors = ["stvnksslr <stvnksslr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "0.14.0"
httpx = "0.15.5"
slack-machine = "^0.20.1"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
pytest = "6.1.1"
pytest-cov = "^2.10.1"
pytest-sugar = "^0.9.4"
pytest-httpx = "^0.9.0"
pep8-naming = "^0.9.0"
flake8 = "^3.8"
flake8-pytest = "^1.3"
flake8-bandit = "^2.1.2"
flake8-functions = "^0.0.4"
flake8-variables-names = "^0.0.3"
flake8-bugbear = "^20.1.4"
flake8-eradicate = "^0.4.0"
ipykernel = "^5.3.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
