[tool.poetry]
name = "dominions-bot"
version = "0.0.0"
description = "Bot for keeping track of dominions turns for slack and discord"
authors = ["stvnksslr <stvnksslr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.14.0poetry u"
httpx = "^0.13.3"
slack-machine = "0.23.2"
aiohttp = "3.7.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.8"
pytest-sugar = "^0.9.2"
pep8-naming = "^0.9.0"
flake8 = "^3.7"
flake8-pytest = "^1.3"
flake8-bandit = "^2.1.2"
flake8-functions = "^0.0.2"
flake8-variables-names = "^0.0.3"
flake8-bugbear = "^19.8.0"
flake8-eradicate = "^0.2.3"
black = "^21.9b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
